--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.8.4",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.2",
+    "@supabase/supabase-js": "^2.81.1",
     "axios": "^1.13.2",
     "expo": "~54.0.23",
     "expo-camera": "~17.0.9",
